--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gstore/core": "*",
     "@tabler/icons-react": "^3.19.0",
-    "frontend": "file:",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
